--- a/productos.html
+++ b/productos.html
@@ -6,6 +6,9 @@
     <title>Productos</title>
 </head>
 <body>
-    
+    <h1>Nuestra Mercancia</h1>
+    <p>En esta pagina puedes ver y comprer todos nuestros productos oficiales incluyendo camisetas, accesorios, etc</p>
+    <a href="index.html">Inicio</a>
+    <a href="redes_sociales.html">Redes sociales</a>
 </body>
 </html>
