--- a/redes_sociales.html
+++ b/redes_sociales.html
@@ -3,32 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes</title>
+    <title>Jugadores y Redes sociales</title>
 </head>
 <body>
+  <h1>Leyendas Históricas del Club</h1>
+  <style>
+    table, th, td {
+      border:1px solid black;
+    }
+    </style>
 <table>
-    <th></th>
-    <table border="1">
-        <thead>
-          <tr>
-            <th>Nombre</th>
-            <th>Edad</th>
-            <th>País</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lionel Messi</td>
-            <td>36</td>
-            <td>Argentina</td>
-          </tr>
-          <tr>
-            <td>Pedri</td>
-            <td>21</td>
-            <td>España</td>
-          </tr>
-        </tbody>
-      </table>
-</table>
+  <tr>
+    <th>Jugadores</th>
+    <th>Posicion</th>
+    <th>Pais</th>
+  </tr>
+  <tr>
+    <th>Lionel Messi</th>
+    <th>Delantero / Extremo derecho</th>
+    <th>Argentina</th>
+  </tr>
+  <tr>
+    <th>Xavi Hernández</th>
+    <th>Mediocampista central</th>
+    <th>España</th>
+  </tr>
+  </table>
+<h2>Nuestras Redes sociales</h2>
+<a href="https://www.instagram.com/fcbarcelona/">Instagram</a>
+<a href="https://x.com/FCBarcelona">X/Twitter</a>
+<a href="https://www.youtube.com/fcbarcelona">Youtube</a>
+<a href="productos.htm">Productos</a>
+<a href="index.html">Inicio</a>
 </body>
 </html>
