Cambios en el diseño

--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fc Barcelona</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+          margin: 0;
+        }
+        
+        /* Style the header */
+        .header {
+    background-color: #004D98;
+          padding: 20px;
+          text-align: center;
+        }
+        .topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #000000;
+  color: black;
+}
+.footer {
+  background-color:  #A50044;
+  text-align: center;
+  padding: 10px;
+}
+        </style>
 </head>
 <body>
-    <h1>Futbol Club Barcelona</h1>
+    <div class="header">
+        <h1>Futbol Club Barcelona</h1>
+      </div>
+      <div class=".topnav">
+        <a href="productos.html">Productos</a>
+        <a href="redes_sociales.html">Reedes sociales</a>
+      </div>
     <img src="logo fcbarca.png" alt="logo del barcelona">
     <h2>Acerca del club</h2>
     <p>El Fútbol Club Barcelona es una entidad deportiva profesional con sede en Barcelona, Cataluña, España. Fue fundado el 29 de noviembre de 1899 por un grupo de futbolistas suizos, ingleses y catalanes liderados por Hans Gamper (Joan Gamper).
@@ -21,8 +64,8 @@
     </ol>
     <h2>Nuestro Estadio</h2>
     <img src="camp nou.avif" style="width: 500px; height: auto;">
-    <h3>sitios de interes</h3>
-    <a href="productos.html">Productos</a>
-    <a href="redes_sociales.html">Redes sociales</a>
+    <div class=".footer">
+        <p>© 2025 FC Barcelona</p>
+      </div>
 </body>
 </html>
