--- a/productos.html
+++ b/productos.html
@@ -7,7 +7,34 @@
 </head>
 <body>
     <h1>Nuestra Mercancia</h1>
+    <style>
+        table, th, td {
+          border:1px solid black;
+        }
+        </style>
     <p>En esta pagina puedes ver y comprer todos nuestros productos oficiales incluyendo camisetas, accesorios, etc</p>
+    <table>
+        <tr>
+            <th>Productos Deportivos Oficiales</th>
+            <th>Merchandising</th>
+            <th>Experiencias y Servicios</th>
+        </tr>
+        <tr>
+             <th>Camisetas y equipaciones (local, visitante, tercera equipación, portero, etc.)</th>
+             <th>Souvenirs (llaveros, tazas, bufandas, banderas, imanes, etc.)</th>
+            <th>Entradas para partidos</th>
+        </tr>
+        <tr>
+            <th>Ropa de entrenamiento y casual (chándales, sudaderas, polos, etc.)</th>
+            <th>Juguetes y juegos (muñecos de jugadores, juegos de mesa temáticos)</th>
+            <th>Visitas al Camp Nou Experience y Museo del Barça</th>
+        </tr>
+        <tr>
+            <th>Balones oficiales con el escudo del club</th>
+            <th>Coleccionables (pegatinas, cromos, figuras)</th>
+            <th>Productos digitales: membresías de Barça TV+, apps oficiales, NFTs</th>
+        </tr>
+    </table>
     <a href="index.html">Inicio</a>
     <a href="redes_sociales.html">Redes sociales</a>
 </body>
