--- a/redes_sociales.html
+++ b/redes_sociales.html
@@ -35,5 +35,10 @@
 <a href="https://www.youtube.com/fcbarcelona">Youtube</a>
 <a href="productos.htm">Productos</a>
 <a href="index.html">Inicio</a>
+<footer>
+  <a href="https://www.instagram.com/fcbarcelona/">Instagram</a>
+<a href="https://x.com/FCBarcelona">X/Twitter</a>
+<a href="https://www.youtube.com/fcbarcelona">Youtube</a>
+</footer>
 </body>
 </html>
