avances en diseño

--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
           margin: 0;
         }
         
-        /* Style the header */
         .header {
-    background-color: #004D98;
+    background-color: #A50044;
           padding: 20px;
           text-align: center;
         }
         .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #A50044;
 }
 
-/* Style the topnav links */
 .topnav a {
   float: left;
   display: block;
@@ -31,9 +29,8 @@
   text-decoration: none;
 }
 
-/* Change color on hover */
 .topnav a:hover {
-  background-color: #000000;
+  background-color: #722ca0;
   color: black;
 }
 .footer {
@@ -41,31 +38,43 @@
   text-align: center;
   padding: 10px;
 }
+img {
+  display: block;
+  margin: auto;
+}
         </style>
 </head>
 <body>
     <div class="header">
         <h1>Futbol Club Barcelona</h1>
+        <h2>Més que un club</h2>
       </div>
-      <div class=".topnav">
+      <div class="topnav">
         <a href="productos.html">Productos</a>
-        <a href="redes_sociales.html">Reedes sociales</a>
+        <a href="redes_sociales.html">Redes sociales</a>
       </div>
-    <img src="logo fcbarca.png" alt="logo del barcelona">
-    <h2>Acerca del club</h2>
-    <p>El Fútbol Club Barcelona es una entidad deportiva profesional con sede en Barcelona, Cataluña, España. Fue fundado el 29 de noviembre de 1899 por un grupo de futbolistas suizos, ingleses y catalanes liderados por Hans Gamper (Joan Gamper).
-        Es uno de los clubes más prestigiosos y exitosos del mundo. Destaca no solo por su desempeño deportivo, sino también por su estructura como club propiedad de sus socios (no es una empresa privada tradicional, sino una entidad sin ánimo de lucro). 
-        Su lema es “Més que un club” ("Más que un club"), reflejando su compromiso con la identidad catalana, valores sociales y participación democrática.</p>
-    <h2>Ubicacion:</h2>
-    <ol>
-        <li>Ciudad: Barcelona, Cataluña, España</li>
-        <li>Estadio principal: Spotify Camp Nou (actualmente en remodelación; jugarán temporalmente en el Estadi Olímpic Lluís Companys durante la temporada 2024-25)</li>
-        <li>Dirección oficial: C. d'Arístides Maillol, 12, 08028 Barcelona, España</li>
-    </ol>
-    <h2>Nuestro Estadio</h2>
-    <img src="camp nou.avif" style="width: 500px; height: auto;">
-    <div class=".footer">
+      <div class="img">
+        <img src="584a9b3bb080d7616d298777.png" style="width: 200px; height: auto;">
+        <h2>Acerca del club</h2>
+        <p>El Fútbol Club Barcelona es una entidad deportiva profesional con sede en Barcelona, Cataluña, España. Fue fundado el 29 de noviembre de 1899 por un grupo de futbolistas suizos, ingleses y catalanes liderados por Hans Gamper (Joan Gamper).
+            Es uno de los clubes más prestigiosos y exitosos del mundo. Destaca no solo por su desempeño deportivo, sino también por su estructura como club propiedad de sus socios (no es una empresa privada tradicional, sino una entidad sin ánimo de lucro). 
+            Su lema es “Més que un club” ("Más que un club"), reflejando su compromiso con la identidad catalana, valores sociales y participación democrática.</p>
+      </div>
+      <div class="img">
+        <h2>Nuestro Estadio</h2>
+        <img src="camp nou.avif" style="width: 600px; height: auto;">
+        <p>El Spotify Camp Nou es el estadio del FC Barcelona y uno de los más icónicos del mundo. Inaugurado en 1957, ha sido durante décadas el estadio con mayor capacidad de Europa, con más de 99,000 espectadores. Actualmente está en proceso de renovación como parte del proyecto Espai Barça, que lo transformará en un recinto moderno y sostenible, con una capacidad superior a 105,000 personas. Durante las obras, el equipo juega en el Estadi Olímpic Lluís Companys, y se espera volver al nuevo Camp Nou parcialmente en 2024, con su reapertura completa prevista para 2026.</p>
+        <h2>Ubicacion:</h2>
+        <ol>
+            <li>Ciudad: Barcelona, Cataluña, España</li>
+            <li>Estadio principal: Spotify Camp Nou (actualmente en remodelación; jugarán temporalmente en el Estadi Olímpic Lluís Companys durante la temporada 2024-25)</li>
+            <li>Dirección oficial: C. d'Arístides Maillol, 12, 08028 Barcelona, España</li>
+        </ol>
+      </div>
+    <div class="footer">
         <p>© 2025 FC Barcelona</p>
+        <p>Telefono: +34 902 18 99 00</p>
+        <p>opcional: +34 93 496 36 00</p>
       </div>
 </body>
 </html>
