--- a/redes_sociales.html
+++ b/redes_sociales.html
@@ -1,52 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="e">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jugadores y Redes sociales</title>
+    <title>Redes sociales y leyendas del club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-      body{
-        margin: 0;
-      }
-
-      .header {
-  background-color: #A50044;
-  padding: 20px;
-  text-align: center;
-}
-.topnav {
-  overflow: hidden;
-  background-color: #A50044;
-}
-
-/* Style the topnav links */
-.topnav a {
-  float: left;
-  display: block;
-  color: #000000;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change color on hover */
-.topnav a:hover {
-  background-color: #722ca0;
-  color: black;
-}
-.footer {
-  background-color:  #A50044;
-  text-align: center;
-  padding: 10px;
-}
-    </style>
+    <link rel="icon" href="584a9b3bb080d7616d298777.png">
 </head>
 <body>
   <div class="header">
-    <h1>Leyendas Históricas del Club</h1>
+    <h1>Redes sociales y leyendas del club</h1>
   </div>
+  <div class="img">
+    <img src="584a9b3bb080d7616d298777.png" style="width: 200px; height: auto;">
   <div class="topnav">
     <a href="index.html">Inicio</a>
     <a href="productos.html">Productos</a>
@@ -56,7 +23,12 @@
       border:1px solid black;
     }
     </style>
-<table style="width: 90%; height: 50%;">
+    <h2>Leyendas historicas</h2>
+<p>Lionel Messi y Xavi Hernández son leyendas del FC Barcelona porque marcaron una época dorada en la historia del club. Messi es el máximo goleador histórico y el jugador más determinante que ha vestido la camiseta blaugrana. Su talento, lealtad y récords lo convirtieron en el símbolo del Barça moderno. Ganó todos los títulos posibles y fue clave en momentos históricos, como las finales de Champions y los clásicos ante el Real Madrid.
+Por su parte, Xavi fue el motor del equipo en el centro del campo. Su visión, inteligencia táctica y dominio del pase definieron el estilo de juego del Barça y de la selección española durante más de una década. Fue el líder silencioso que dio equilibrio al equipo y uno de los arquitectos del famoso "tiki-taka".
+Juntos, no solo ganaron títulos, sino que elevaron al Barça a un nivel de excelencia futbolística admirado en todo el mundo.
+  </p>
+<table style="width: 90%; ">
   <tr>
     <th>Jugadores</th>
     <th>Posicion</th>
@@ -74,10 +46,12 @@
   </tr>
   </table>
 <h2>Nuestras Redes sociales</h2>
-<div>
-  <a href="https://www.instagram.com/fcbarcelona/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-  <a href="https://x.com/FCBarcelona" target="_blank" class="x/Twitter "><i class="fab fa-twitter"></i></a>
-  <a href="https://www.youtube.com/fcbarcelona" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a>
+<p>Las redes sociales del FC Barcelona ofrecen a los aficionados una forma rápida y cercana de seguir al club en tiempo real. A través de plataformas como Instagram, X, Facebook y YouTube, se puede acceder a noticias, alineaciones, resultados, fichajes y contenido exclusivo como entrenamientos, entrevistas y momentos del vestuario. Además, permiten interactuar directamente con el club mediante encuestas, sorteos y campañas especiales.
+También se puede acceder a promociones, venta de entradas y productos de la tienda oficial, así como a servicios como Barça TV+ o Spotify Barça. El contenido está disponible en varios idiomas, lo que fortalece la conexión con su afición global. Los fans pueden compartir sus propios contenidos usando hashtags del club y, en algunos casos, ser destacados por las cuentas oficiales.</p>
+<div class="iconos">
+  <a href="https://www.instagram.com/fcbarcelona/" target="_blank" class="instagram"><i class="fab fa-instagram" style="font-size: 50px;"></i></a>
+  <a href="https://x.com/FCBarcelona" target="_blank" class="x/Twitter "><i class="fab fa-twitter" style="font-size: 50px;"></i></a>
+  <a href="https://www.youtube.com/fcbarcelona" target="_blank" class="youtube"><i class="fab fa-youtube" style="font-size: 50px;"></i></a>
 </div>
 <div class="footer">
   <p>© 2025 FC Barcelona</p>
