--- a/index.html
+++ b/index.html
@@ -38,11 +38,8 @@
   text-align: center;
   padding: 10px;
 }
-img {
-  display: block;
-  margin: auto;
-}
         </style>
+        <link rel="icon" href="584a9b3bb080d7616d298777.png">
 </head>
 <body>
     <div class="header">
