--- a/productos.html
+++ b/productos.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="584a9b3bb080d7616d298777.png">
 </head>
 <body>
+<div class="header">
     <h1>Nuestra Mercancia</h1>
+</div>
+<div class="img">
+    <img src="584a9b3bb080d7616d298777.png" style="width: 200px; height: auto;">
+</div>
+<div class="topnav">
+    <a href="index.html">Inicio</a>
+    <a href="redes_sociales.html">Redes sociales</a>
+</div>
+<h2>Sobre nuestros productos</h2>
+<p>El FC Barcelona ofrece una amplia gama de productos oficiales que permiten a sus aficionados mostrar su pasión por el club. Entre los artículos más populares se encuentran las camisetas del primer equipo, tanto de local como de visitante, así como la equipación de entrenamiento y edición especial. Además, la tienda oficial del Barça incluye una gran variedad de ropa deportiva, accesorios, balones, bufandas y productos para niños.</p>
+<p>También hay productos coleccionables como tazas, llaveros, mochilas, material escolar y artículos para el hogar, todos con el escudo y colores del club. En los últimos años, el Barça ha ampliado su catálogo con contenido digital exclusivo, suscripciones a Barça TV+, merchandising personalizado y colaboraciones especiales con marcas globales. Estos productos no solo están disponibles en tiendas físicas, sino también a través de la tienda online oficial, lo que permite a los fans de todo el mundo acceder fácilmente al universo blaugrana.</p>
     <style>
         table, th, td {
           border:1px solid black;
         }
         </style>
     <p>En esta pagina puedes ver y comprer todos nuestros productos oficiales incluyendo camisetas, accesorios, etc</p>
+    <p>Si quieres saber mas sobre nuestros productos ingresa a este link:</p>
+    <a href="https://store.fcbarcelona.com/es-ar?utm_source=chatgpt.com " target="_blank">Tienda oficial del Barcelona</a>
     <table>
         <tr>
             <th>Productos Deportivos Oficiales</th>
@@ -36,7 +51,12 @@
             <th>Productos digitales: membresías de Barça TV+, apps oficiales, NFTs</th>
         </tr>
     </table>
-    <a href="index.html">Inicio</a>
-    <a href="redes_sociales.html">Redes sociales</a>
+    <div class="iconos">
+    </div>
+    <div class="footer">
+        <p>© 2025 FC Barcelona</p>
+        <p>Telefono: +34 902 18 99 00</p>
+        <p>opcional: +34 93 496 36 00</p>
+    </div>
 </body>
 </html>
